@@ -1,5 +1,6 @@
 package com.wasilewskyy.medical_clinic.controller;
 
+import com.wasilewskyy.medical_clinic.exception.ErrorMessage;
 import com.wasilewskyy.medical_clinic.mapper.PatientMapper;
 import com.wasilewskyy.medical_clinic.model.CreatePatientCommand;
 import com.wasilewskyy.medical_clinic.model.Password;
@@ -15,7 +16,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -32,17 +32,17 @@ public class PatientController {
                     schema = @Schema(implementation = PatientDTO.class)))
     @GetMapping
     public List<PatientDTO> getAllPatients() {
-        return patientService.getAllPatients()
-                .stream()
+        return patientService.getAllPatients().stream()
                 .map(patientMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Operation(summary = "Get patient by email", description = "Returns a single patient by email.")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Patient found",
-                    content = @Content(schema = @Schema(implementation = PatientDTO.class))),
-            @ApiResponse(responseCode = "404", description = "Patient not found")
+                    content = @Content(mediaType = "application/json", schema = @Schema(implementation = PatientDTO.class))),
+            @ApiResponse(responseCode = "404", description = "Patient not found",
+                    content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorMessage.class)))
     })
     @GetMapping("/{email}")
     public PatientDTO getPatientByEmail(@PathVariable String email) {
@@ -51,7 +51,7 @@ public class PatientController {
 
     @Operation(summary = "Add a new patient", description = "Creates a new patient in the system.")
     @ApiResponse(responseCode = "201", description = "Patient created",
-            content = @Content(schema = @Schema(implementation = PatientDTO.class)))
+            content = @Content(mediaType = "application/json", schema = @Schema(implementation = PatientDTO.class)))
     @PostMapping
     public PatientDTO addPatient(@RequestBody CreatePatientCommand command) {
         return patientMapper.toDTO(patientService.addPatient(patientMapper.toPatient(command)));
@@ -66,7 +66,7 @@ public class PatientController {
 
     @Operation(summary = "Update a patient by email", description = "Updates an existing patient by email.")
     @ApiResponse(responseCode = "200", description = "Patient updated",
-            content = @Content(schema = @Schema(implementation = PatientDTO.class)))
+            content = @Content(mediaType = "application/json", schema = @Schema(implementation = PatientDTO.class)))
     @PutMapping("/{email}")
     public PatientDTO updatePatient(@PathVariable String email, @RequestBody CreatePatientCommand patientCommand) {
         return patientMapper.toDTO(patientService.updatePatient(email, patientMapper.toPatient(patientCommand)));
@@ -75,7 +75,7 @@ public class PatientController {
 
     @Operation(summary = "Change patient's password", description = "Updates only the patient's password.")
     @ApiResponse(responseCode = "200", description = "Password updated",
-            content = @Content(schema = @Schema(implementation = PatientDTO.class)))
+            content = @Content(mediaType = "application/json", schema = @Schema(implementation = PatientDTO.class)))
     @PatchMapping("/{email}/password")
     public PatientDTO changePassword(@PathVariable String email, @RequestBody Password password) {
         return patientMapper.toDTO(patientService.changePassword(email, password));
